fix: various improvements (clean up oapi, settable port, etc)
